@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2008.August.14 (0.9.21)
+2008.August.18 (0.9.21)
   * New Starters:
     -------------
     * Silver Frame
@@ -37,6 +37,8 @@ $Id$
     * + Confetti - Paints random confetti bits on the canvas.
       + Fold - Folds the corners of the image up, like a piece of paper.
       + Rails - Draws train tracks / rails over the image.
+      + TV - Adds television (CRT) interlacing lines over the image.
+      + Rosette - Paints at 3 points on the screen, in a rosette shape.
       By Adam 'foo-script' Rakowski <foo-script@o2.pl>
       (Part of Tux4Kids' participation in Google Summer of Code 2008)
 
